--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -12,15 +12,16 @@
 
  */
 
+
+ @import 'bootstrap';
+
  @import 'tapas-variables';
 
  @import 'tapas-mixins';
 
  @import 'font-awesome/font-awesome';
 
- @import 'bootstrap';
-
- @import 'blacklight/blacklight';
+//  @import 'blacklight/blacklight';
 
 // @import 'core_files';
 
@@ -35,5 +36,3 @@
  @import 'tapas-general';
 
 // @import 'nestable';
-
- //= require_tree .
